--- a/index.html
+++ b/index.html
@@ -29,21 +29,20 @@
     <main>
 
         <div id="First">
-
             <div id="Content">
-                <h2>Unleash the Culinary Magic</h2>
-                <h1>Experience <span>Coffee Extravaganza</span></h1>
+                <h2>Savor the Burger Bliss</h2>
+                <h1>Indulge in <span>Juicy Burger Delights</span></h1>
                 <p>
-                    Dive into a realm where coffee isn't just a beverage, but a symphony of flavors and aromas that awaken your senses and tantalize your taste buds. Our culinary wizards blend the finest coffee beans with exquisite ingredients to create masterpieces that defy expectations. From enchanting espresso elixirs to mesmerizing mocha marvels, each sip is a journey through a world of gastronomic delight. Indulge in our coffee creations and embark on an epicurean adventure like never before.
+                    Immerse yourself in a world where burgers aren't just a meal, but a celebration of taste and texture that leaves you craving for more. Our culinary artisans craft each burger with premium ingredients and expert techniques to deliver a gastronomic experience like no other. From succulent beef patties to mouthwatering veggie stacks, every bite is a symphony of flavors that ignites your senses. Treat yourself to our burger creations and embark on a culinary journey filled with indulgence and satisfaction.
                 </p>
-
+        
                 <div id="Btns">
                     <button id="Btn1">Order Now</button>
                     <button id="Btn2">Discover More</button>
                 </div>
             </div>
-
         </div>
+        
 
 
         <div id="Second">
