--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta name="author" content="Maitrayee R" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="icon" href="./assets/giphy.gif">
     <title>The Unique Cafe</title>
   </head>
+
   <body>
     <nav>
       <img src="./assets/image.png" alt="" />
